好的，第二次说明，已经完成登录静态页面

--- a/logn.html
+++ b/logn.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>git测试</h1>
+    账号：<input type="text"><br>
+    密码：<input type="password"><br>
+    <button>登录</button>
 </body>
 </html>
